// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionList demo -- actionChildren 1`] = `
.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-11 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-9 emotion-10"
        />
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- actionList 1`] = `
.emotion-66 {
  vertical-align: baseline;
}

.emotion-93 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-93 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-55 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-55 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-55 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-55:hover {
  border-color: #3357df;
}

.emotion-55:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-55 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-55 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-55 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-55 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-55 .uc-fe-switch-inner {
  color: #15ad31;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #e6ffed;
}

.emotion-55 .uc-fe-switch-button {
  left: 100%;
  margin-left: -19px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-70 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-70 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-70 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-70 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-70 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70:hover {
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-70 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-70 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-70 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-70 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-96 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-96:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-106 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-106:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-66 {
  vertical-align: baseline;
}

.emotion-93 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-93 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-55 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-55 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-55 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-55:hover {
  border-color: #3357df;
}

.emotion-55:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-55 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-55 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-55 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-55 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-55 .uc-fe-switch-inner {
  color: #15ad31;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #e6ffed;
}

.emotion-55 .uc-fe-switch-button {
  left: 100%;
  margin-left: -19px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-70 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-70 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-70 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-70 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-70 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70:hover {
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-70 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-70 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-70 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-70 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-96 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-96:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-106 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-106:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <form
    class="uc-fe-form demo-form emotion-93 emotion-94"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        button styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              primary
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              border
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              border-gray
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        smart
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-55 emotion-56"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        exposeCount
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-70 emotion-71"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-66 emotion-67"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-66 emotion-67"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        actionListLength
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-70 emotion-71"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-66 emotion-67"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-66 emotion-67"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-95 emotion-96 emotion-97"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-95 emotion-96 emotion-97"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-95 emotion-96 emotion-97"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-106 emotion-97"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-66 emotion-67"
        />
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- dropdownButton 1`] = `
.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-9:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-20 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-20:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-9:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-20 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-20:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-9 emotion-2"
        type="button"
      >
        更多
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-20 emotion-2"
        type="button"
      >
        更多
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- exposeCount 1`] = `
.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-2:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-2:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 4
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-5 emotion-3"
        type="button"
      >
        Action 5
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- popoverProps 1`] = `
.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-3 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-3 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <div />
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-5 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-3 emotion-4"
        />
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- size 1`] = `
.emotion-14 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-14:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-24:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-27:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-37 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-37:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-14 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-14:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-24:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-27:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-37 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-37:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-11 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-9 emotion-10"
        />
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-14 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-14 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-14 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-24 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-9 emotion-10"
        />
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-0 emotion-27 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-0 emotion-27 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-0 emotion-27 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-37 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-9 emotion-10"
        />
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- smart 1`] = `
.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-35 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-35:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-33 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-35 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-35:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-33 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 4
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 5
      </button>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 4
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-35 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-33 emotion-34"
        />
      </button>
    </ul>
  </div>
</div>
`;

exports[`ActionList demo -- tooltip 1`] = `
.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-7:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-4.emotion-4 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-7:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-11:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-9 {
  vertical-align: baseline;
}

.emotion-1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  margin-right: 4px;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-4.emotion-4 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-0 emotion-1 emotion-2"
        type="button"
      >
        Action 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled uc-fe-button-disabled-fake emotion-0 emotion-4 emotion-2"
        type="button"
      >
        Action 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled-fake emotion-0 emotion-7 emotion-2"
        type="button"
      >
        Action 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-11 emotion-2"
        type="button"
      >
        <i
          class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-9 emotion-10"
        />
      </button>
    </ul>
  </div>
</div>
`;
